--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.378.0",
     "next": "^14.0.2",
+    "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
